--- a/Views/Projects/Create.cshtml
+++ b/Views/Projects/Create.cshtml
@@ -10,7 +10,7 @@
     <div class="col-2"></div>@*skinny up the card*@
     <div class="col-8">
         @*body col*@
-        <div class="card card-navy">
+        <div class="card card-project">
             <!-- /.card -->
             <div class="card-header">
                 <h1 class="card-title">Create New Project </h1>
@@ -60,7 +60,7 @@
                         <div class="col-8">
                         </div>
                         <div class="col-4">
-                            <input type="submit" value="Create" class="btn btn-primary" />
+                            <input type="submit" value="Create" class="btn btn-project" />
                             @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-dark" })
                         </div>
                     </div>
