--- a/Views/Projects/Details.cshtml
+++ b/Views/Projects/Details.cshtml
@@ -11,14 +11,14 @@
             <!-- New Card row -->
             <div class="col-6">
                 @*body col*@
-                <div class="card card-navy">
+                <div class="card card-project">
                     <!-- /.card -->
                     <div class="card-header">
                         <h1 class="card-title">@ViewBag.CardTitle </h1>
                         <div class="card-tools">
-                            <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
+                            @*<button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
                                 <i class="fas fa-minus"></i>
-                            </button>
+                            </button>*@
                         </div>
                     </div>
                     <div class="card-body">
@@ -40,12 +40,14 @@
                                 <p>@Model.Description</p>
                             </div>
                         </div>
-                        <div class="card-footer">
-                            @if (User.IsInRole("Admin") || User.IsInRole("ProjectManager"))
-                            {
-                                @Html.ActionLink("Edit information", "Edit", new { id = Model.Id }, new { @class = "btn btn-success" })
-                                @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-dark" })
-                            }
+                        <div class="card-footer">                            
+                            <span class="float-right">
+                                @if (User.IsInRole("Admin") || User.IsInRole("ProjectManager"))
+                                {
+                                    @Html.ActionLink("Edit information", "Edit", new { id = Model.Id }, new { @class = "btn btn-project" })
+                                    @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-dark" })
+                                }
+                            </span>                           
                         </div>  <!-- /.card-footer-->
 
                     </div> <!-- /.card-body -->
@@ -53,13 +55,13 @@
             </div>@*body col*@
             <div class="col-6">
                 @*<div class="col">*@
-                <div class="card card-navy">
+                <div class="card card-project">
                     <div class="card-header">
                         <h3 class="card-title">Project Members</h3>
                         <div class="card-tools">
-                            <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
+                            @*<button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
                                 <i class="fas fa-minus"></i>
-                            </button>
+                            </button>*@
 
                         </div>
                     </div>
@@ -77,7 +79,7 @@
                     <div class="card-footer">
                         @if (User.IsInRole("Admin") || User.IsInRole("ProjectManager"))
                         {
-                            @Html.ActionLink("Update Members", "TeamManagement", new { id = Model.Id }, new { @class = "btn btn-success" })
+                            @Html.ActionLink("Update Members", "TeamManagement", new { id = Model.Id }, new { @class = "btn btn-project" })
                         }
                     </div>  <!-- /.card-footer-->
                 </div>  <!-- /.card -->
@@ -87,7 +89,7 @@
             @*Tickets Card*@
             <div class="col-12">
                 <div class="col-12">
-                    <div class="card card-navy card-tabs">
+                    <div class="card card-project card-tabs">
                         <div class="card-header p-0 pt-1">
                             <ul class="nav nav-tabs" id="custom-tabs-one-tab" role="tablist">
                                 <li class="nav-item">
