--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -35,8 +35,8 @@
     <link href="~/Content/summernote.css" rel="stylesheet" />
     <!-- Google Font: Source Sans Pro -->
     <link href="/fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
-    <!-- DataTables -->
-
+    <!-- My CSS -->
+    <link href="~/Content/custom.css" rel="stylesheet" />
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
     <div class="wrapper">
