--- a/Views/Projects/Edit.cshtml
+++ b/Views/Projects/Edit.cshtml
@@ -7,7 +7,7 @@
             <br />           
             <div class="col-8">
                 @*body col*@
-                <div class="card card-olive">
+                <div class="card card-project">
                     <!-- /.card -->
                     <div class="card-header">
                         <h1 class="card-title">@ViewBag.CardTitle </h1>
@@ -52,14 +52,8 @@
                                 </div>
                                 <div class="col-8">
                                     <span class="float-right">
-                                        <div class="row">
-                                            <div class="col">
-                                                @Html.Label("Archive Project", new { @class = "form-label" })
-                                            </div>
-                                            <div class="col">
-                                                @Html.CheckBoxFor(model => model.IsArchived, new { @class = "form-control" })
-                                            </div>
-                                        </div>
+                                        @Html.Label("Archive Project", new { @class = "form-label" })
+                                        @Html.CheckBoxFor(model => model.IsArchived, new { @class = "form-control" })
                                     </span>
                                 </div>
                             </div>
@@ -85,7 +79,7 @@
                                 <br />
                                 <div class="col">
                                     <span class="float-right">
-                                        <input type="submit" value="Save Changes" class="btn btn-success" />
+                                        <input type="submit" value="Save Changes" class="btn btn-project" />
                                         @Html.ActionLink("Back To Project", "Details", new { id = Model.Id }, new { @class = "btn btn-dark" })
                                     </span>
                                 </div>
