--- a/Views/Projects/Index.cshtml
+++ b/Views/Projects/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="row">
     <!-- New Card row -->
     <div class="col">
-        <div class="card card-navy">
+        <div class="card card-project">
             <div class="card-header">
                 <h3 class="card-title">@ViewBag.CardTitle</h3>
                 <div class="card-tools">
@@ -29,7 +29,7 @@
                             </th>
                             <th>
                                 @Html.DisplayNameFor(model => model.Description)
-                            </th>juh32
+                            </th>
                             <th>
                                 @Html.DisplayName("Project Manager")
                             </th>
