--- a/Views/Projects/ManageProjectUserAssignments.cshtml
+++ b/Views/Projects/ManageProjectUserAssignments.cshtml
@@ -8,7 +8,7 @@
         <div class="row">
             <!-- New Card row -->
             <div class="col">
-                <div class="card card-navy">
+                <div class="card card-project">
                     <div class="card-header">
                         <h3 class="card-title">@ViewBag.CardTitle</h3>
                         <div class="card-tools">
