--- a/Views/Projects/TeamManagement.cshtml
+++ b/Views/Projects/TeamManagement.cshtml
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="row">
             <div class="col-8">
-                <div class="card card-navy">
+                <div class="card card-project">
                     <div class="card-header">
                         <h3 class="card-title">@ViewBag.CardTitle</h3>
 
