--- a/Views/TicketAttachments/Delete.cshtml
+++ b/Views/TicketAttachments/Delete.cshtml
@@ -1,80 +1,48 @@
 ﻿@model AntTrak.Models.TicketAttachment
 
-@{
-    ViewBag.Title = "Delete";
-}
 
-<h2>Delete</h2>
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>TicketAttachment</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Ticket.SubmitterId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Ticket.SubmitterId)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.User.FirstName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.User.FirstName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.FilePath)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.FilePath)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.FileUrl)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.FileUrl)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Created)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Created)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Updated)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Updated)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+    <div class="container">
+        <div class="row">
+            <!-- New Card row -->
+            <div class="col-6">
+                <div class="card card-ticket">
+                    <div class="card-header">
+                        <h3 class="card-title">Confirm Attachment Deletion</h3>
+                        <div class="card-tools"> </div>
+                    </div>
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col">
+                                <h3>Are you sure you want to delete this?</h3>
+                                <br />
+                                <br />
+                            </div>
+                        </div>                                               
+                        <div class="row">
+                            <div class="col offset-4">
+                                <h4>  <a target="_blank" href="@Url.Content(Model.FilePath)">@Model.FileName</a></h4>
+                                <br />
+                            </div>
+                        </div>
+                        
+                    </div>
+                    <!-- /.card-body -->
+                    <div class="card-footer">
+                        <div class="row">
+                            <div class="col">
+                                <input type="submit" value="Delete" class="form-control btn btn-ticket" />
+                            </div>   
+                            <div class="col">
+                                @Html.ActionLink("Back to Ticket", "Details", "Tickets", new { id = Model.TicketId }, new { @class = "form-control btn btn-dark" })
+                            </div>
+                        </div>  <!-- /.card-footer-->
+                    </div>  <!-- /.card -->
+                </div>
+            </div> <!-- (New Card row) -->
         </div>
-    }
-</div>
+    </div>
+}
