--- a/Views/TicketComments/Delete.cshtml
+++ b/Views/TicketComments/Delete.cshtml
@@ -1,64 +1,49 @@
 ﻿@model AntTrak.Models.TicketComment
 
-@{
-    ViewBag.Title = "Delete";
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+    @Html.HiddenFor(Model => Model.TicketId)
+
+    <div class="container">
+        <div class="row">
+            <!-- New Card row -->
+            <div class="col-6">
+                <div class="card card-ticket">
+                    <div class="card-header">
+                        <h3 class="card-title">Confirm Comment Deletion</h3>
+                        <div class="card-tools"> </div>
+                    </div>
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col">
+                                <h3>Are you sure you want to delete this?</h3>
+                                <br />
+                                <br />
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <h4>@Html.DisplayFor(model => model.Body)  </h4>
+                                <br />
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /.card-body -->
+                    <div class="card-footer">
+                        <div class="row">
+                            <div class="col">
+                                <input type="submit" value="Delete" class="form-control btn btn-ticket" />
+                            </div>
+                            <div class="col">
+                                @Html.ActionLink("Back to Ticket", "Details", "Tickets", new { id = Model.TicketId }, new { @class = "form-control btn btn-dark" })
+                            </div>
+                        </div>  <!-- /.card-footer-->
+                    </div>  <!-- /.card -->
+                </div>
+            </div> <!-- (New Card row) -->
+        </div>
+    </div>
+
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>TicketComment</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Ticket.SubmitterId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Ticket.SubmitterId)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.User.FirstName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.User.FirstName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Body)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Body)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Created)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Created)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Updated)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Updated)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
-</div>
