--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -7,7 +7,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Dr. d'Bug | Registration Page</title>
+    <title>AntTrak | Registration Page</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -23,20 +23,31 @@
     <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 </head>
 <body class="hold-transition register-page">
-    @using (Html.BeginForm("Register", "Account", FormMethod.Post))
+    @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { enctype = "Multipart/form-data" }))
     {
         @Html.AntiForgeryToken()
-        
+        @Html.Hidden("key", "")
         <div class="register-box">
             <div class="register-logo">
-                <a href="../../index2.html">Dr. d'Bug</a>
+                <a href="../../index2.html">AntTrak</a>
             </div>
 
-            <div class="card">
+            <div class="card card-danger">
                 <div class="card-body register-card-body">
-                    <p class="login-box-msg">Register a new user</p>
-                    @Html.ValidationSummary("", new { @class = "text-danger" })
+                    @*<p class="login-box-msg">Register a new user</p>*@
+                    <H3>Register a new user!</H3>
+
+                    <br />
+                    <p>Upload an Avatar</p>
                     @*<form action="../../index.html" method="post">*@
+                    <div class="input-group mb-3">
+                        <input type="file" name="image" class="form-control" placeholder="">
+                        <div class="input-group-append">
+                            <div class="input-group-text">
+                                <span class="fas fa-file"></span>
+                            </div>
+                        </div>
+                    </div>
                     <div class="input-group mb-3">
                         <input type="text" name="FirstName" class="form-control" placeholder="First Name">
                         <div class="input-group-append">
@@ -84,12 +95,7 @@
                     </div>
                     <div class="row">
                         <div class="col-8">
-                            @*<div class="icheck-primary">
-                    <input type="checkbox" id="agreeTerms" name="terms" value="agree">
-                    <label for="agreeTerms">
-                        I agree to the <a href="#">terms</a>
-                    </label>
-                </div>*@
+
                         </div>
                         <!-- /.col -->
                         <div class="col-4">
@@ -99,31 +105,31 @@
                     </div>
                     @*</form>*@
 
-                    <div class="social-auth-links text-center">
-                        <p>- OR -</p>
-                        <a href="#" class="btn btn-block btn-primary">
-                            <i class="fab fa-facebook mr-2"></i>
-                            Sign up using Facebook
-                        </a>
-                        <a href="#" class="btn btn-block btn-danger">
-                            <i class="fab fa-google-plus mr-2"></i>
-                            Sign up using Google+
-                        </a>
-                    </div>
+                    @*<div class="social-auth-links text-center">
+            <p>- OR -</p>
+            <a href="#" class="btn btn-block btn-primary">
+                <i class="fab fa-facebook mr-2"></i>
+                Sign up using Facebook
+            </a>
+            <a href="#" class="btn btn-block btn-danger">
+                <i class="fab fa-google-plus mr-2"></i>
+                Sign up using Google+
+            </a>
+        </div>*@
                     <a href="@Url.Action("Login", "Account")" class="text-center">Registered User Sign On</a>
                 </div>
                 <!-- /.form-box -->
             </div><!-- /.card -->
         </div>
 
-    }
-    <!-- /.register-box -->
-    <!-- jQuery -->
-    <script src="~/Scripts/jquery.min.js"></script>
-    <!-- Bootstrap 4 -->
-    <script src="~/Scripts/bootstrap.bundle.min.js"></script>
-    <!-- AdminLTE App -->
-    <script src="~/Scripts/adminlte.min.js"></script>
-</body>
+        }
+        <!-- /.register-box -->
+        <!-- jQuery -->
+        <script src="~/Scripts/jquery.min.js"></script>
+        <!-- Bootstrap 4 -->
+        <script src="~/Scripts/bootstrap.bundle.min.js"></script>
+        <!-- AdminLTE App -->
+        <script src="~/Scripts/adminlte.min.js"></script>
+    </body>
 </html>
 
