--- a/Views/Admin/ManageRoles.cshtml
+++ b/Views/Admin/ManageRoles.cshtml
@@ -1,72 +1,103 @@
-﻿@model IEnumerable<AntTrak.ViewModel.RoleManagement>
+﻿@model IEnumerable<AntTrak.ViewModel.CustomUserData>
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken();
     <div class="container">
-        <div class="row">
-            <!-- New Card row -->
-            <div class="col">
-                <div class="card card-olive">
-                    <div class="card-header">
-                        <h3 class="card-title">@ViewBag.CardTitle </h3>
-                        <div class="card-tools">
-                            <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
-                                <i class="fas fa-minus"></i>
-                            </button>
-                            @*<button type="button" class="btn btn-tool" data-card-widget="remove" data-toggle="tooltip" title="Remove">
-                                <i class="fas fa-times"></i>
-                            </button*@>
-                        </div>
-                    </div>
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col">
-                                <input type="submit" value="Save Roles" class="btn btn-success" />
-                                @Html.ActionLink("Close", "Dashboard","Home", new { @class = "btn btn-dark" })
+        <div class="col-8 offset-2">
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken();
+                <div class="row">
+                    <!-- New Card row -->
+                    <div class="col">
+                        <div class="card card-warning">
+                            <div class="card-header">
+                                <h3 class="card-title">@ViewBag.CardTitle</h3>
+                                <div class="card-tools"></div>
                             </div>
-                        </div>
-                        <table class="table table-striped">
-                            <thead>
-                                <tr>
-                                    <th>
-                                        @Html.DisplayName("Full Name")
-                                    </th>
-                                    <th>
-                                        @Html.DisplayName("Email")
-                                    </th>
-                                    <th>
-                                        @Html.DisplayName("Role")
-                                    </th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                @foreach (var item in Model)
-                                {
-                                    <tr>
-                                        <td>
-                                            @*@Html.DisplayFor(model => item.user.Fullname)*@
-                                        </td>
-                                        <td>
-                                            @*@Html.DisplayFor(model => item.user.Email)*@
-                                        </td>
-                                        <td>
-                                            @*@Html.DropDownListFor(model => item.user.Roles.FirstOrDefault().RoleId, item.user.Roles.FirstOrDefault().r     )*@
-
-                                        </td>
-                                    </tr>
-                                }
-                            </tbody>
-                        </table>
-
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col">
+                                        @Html.ListBox("UserIds", null, new { @class = "form-control h-100" })
+                                    </div>
+                                    <div class="col">
+                                        @Html.DropDownList("RoleName", null, "Select Role", new { @class = "form-control" })
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- /.card-body -->
+                            <div class="card-footer">
+                                <div class="row">
+                                    <div class="col-6"></div>
+                                    <div class="col-3">
+                                        <button type="submit" class="form-control btn-warning">Assign User Roles</button>
+                                    </div>
+                                    <div class="col-3">
+                                        @Html.ActionLink("Back to List", "Index", null, new { @class = "form-control btn btn-dark" })
+                                    </div>
+                                </div>
+                            </div>  <!-- /.card-footer-->
+                        </div>  <!-- /.card -->
                     </div>
-                    <!-- /.card-body -->
-                    <div class="card-footer">
-                        Footer
-                    </div>  <!-- /.card-footer-->
-                </div>  <!-- /.card -->
-            </div>
-        </div> <!-- (New Card row) -->
+                </div> <!-- (New Card row) -->
+            }
+
+            <div class="row">
+                <!-- New Card row -->
+                <div class="col">
+                    <div class="card">
+                        <div class="card-header">
+                            <h3 class="card-title"></h3>
+                            <div class="card-tools">    </div>
+                        </div>
+                        <div class="card-body">
+                            <table class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th>
+                                            @Html.DisplayName("Full Name")
+                                        </th>
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.Email)
+                                        </th>
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.RoleName)
+                                        </th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach (var user in Model)
+                                    {
+                                        <tr>
+                                            <td>
+                                                @Html.DisplayFor(model => user.FullName)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(model => user.Email)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(model => user.RoleName)
+                                            </td>
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
+                        <!-- /.card-body -->
+                        <div class="card-footer"> </div>  <!-- /.card-footer-->
+                    </div>  <!-- /.card -->
+                </div>
+            </div> <!-- (New Card row) -->
+        </div>
     </div>
-}
-        
+
+
+
+
+
+
+
+            
+            
+       
+
+
+
