--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -34,40 +34,40 @@
                 <a href="../../index2.html"><b>Dr. d'Bug</b></a>
             </div>
             <!-- /.login-logo -->
-            <div class="card">
+            <div class="card card-danger">
                 <div class="card-body login-card-body">
                     <p class="login-box-msg">Sign in</p>
 
                     @*<form action="../../index3.html" method="post">*@
-                <div class="input-group mb-3">
-                    <input type="email" name="email" class="form-control" placeholder="Email">
-                    <div class="input-group-append">
-                        <div class="input-group-text">
-                            <span class="fas fa-envelope"></span>
+                    <div class="input-group mb-3">
+                        <input type="email" name="email" class="form-control" placeholder="Email">
+                        <div class="input-group-append">
+                            <div class="input-group-text">
+                                <span class="fas fa-envelope"></span>
+                            </div>
                         </div>
+                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                     </div>
-                    @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-                </div>
-                    
-                <div class="input-group mb-3">
-                    <input type="password" name="password" class="form-control" placeholder="Password">
-                    <div class="input-group-append">
-                        <div class="input-group-text">
-                            <span class="fas fa-lock"></span>
+
+                    <div class="input-group mb-3">
+                        <input type="password" name="password" class="form-control" placeholder="Password">
+                        <div class="input-group-append">
+                            <div class="input-group-text">
+                                <span class="fas fa-lock"></span>
+                            </div>
                         </div>
+                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                     </div>
-                    @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-                </div>
                     <div class="row">
                         <div class="col-8">
-                            <div class="icheck-primary">
-                                @*<input type="checkbox" id="remember">
-                                    <label for="remember">
-                                        Remember Me
-                                    </label>*@
-                                @Html.CheckBoxFor(m => m.RememberMe)
-                                @Html.LabelFor(m => m.RememberMe)
-                            </div>
+                            @*<div class="icheck-primary">*@
+                            @*<input type="checkbox" id="remember">
+                <label for="remember">
+                    Remember Me
+                </label>*@
+                            @*@Html.CheckBoxFor(m => m.RememberMe)
+                    @Html.LabelFor(m => m.RememberMe)
+                </div>*@
                         </div>
                         <!-- /.col -->
                         <div class="col-4">
@@ -77,25 +77,25 @@
                     </div>
                     @*</form>*@
 
-                    <div class="social-auth-links text-center mb-3">
-                        <p>- OR -</p>
-                        <a href="#" class="btn btn-block btn-primary">
-                            <i class="fab fa-facebook mr-2"></i> Sign in using Facebook
-                        </a>
-                        <a href="#" class="btn btn-block btn-danger">
-                            <i class="fab fa-google-plus mr-2"></i> Sign in using Google+
-                        </a>
-                    </div>
+                    @*<div class="social-auth-links text-center mb-3">
+            <p>- OR -</p>
+            <a href="#" class="btn btn-block btn-primary">
+                <i class="fab fa-facebook mr-2"></i> Sign in using Facebook
+            </a>
+            <a href="#" class="btn btn-block btn-danger">
+                <i class="fab fa-google-plus mr-2"></i> Sign in using Google+
+            </a>
+        </div>*@
                     <!-- /.social-auth-links -->
 
-                    <p class="mb-1">
-                        @*<a href="forgot-password.html">I forgot my password</a>*@
-                        @*TLF remove line above and uncomment line below when functionality in place*@
+                    <p class="mb-1">                       
                         @Html.ActionLink("Forgot your password?", "ForgotPassword", "Account")
                     </p>
-                    <p class="mb-0">
-                        @*<a href="register.html" class="text-center">Register a new membership</a>*@
+                    <p class="mb-0">                      
                         @Html.ActionLink("Register as a new user", "Register", "Account")
+                    </p>
+                    <p class="mb-0">                      
+                        @Html.ActionLink("Sign on as demo user", "DemoLogin", "Account")
                     </p>
                 </div>
                 <!-- /.login-card-body -->
